welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:6: error: illegal start of simple expression
}
^Poucet:9: error: 'while' expected but '}' found.
	}
        ^